# IntelligentNetwork

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: errors.rs  main.rs  model.in.rs  model.rs  schema.rs  timer.rs
src/controlers/: mod.rs  space_controler.rs  user_controler.rs
src/controllers/: login_controller.rs  mod.rs  space_controller.rs  user_controller.rs
src/managers/: authentication_manager.rs  db_manager.rs  mod.rs  request_manager.rs  response_manager.rs  routes_manager.rs  server_manager.rs  session_manager.rs
src/models/: link.rs  mod.rs  session.rs  space.rs  user.rs
