[package]
name = "intelligent_network"
version = "0.1.0"
authors = ["minig"]
build = "build.rs"

[build-dependencies]
syntex = { version = "0.42.0", optional = true }
diesel_codegen_syntex = { version = "0.7.0", features = ["postgres"], optional = true }

[dependencies]
iron = "0.4.0"
router = "0.3.4"
lazy_static = "0.1.*"
rustc-serialize = "0.3"
diesel = { version = "0.7.0", features = ["chrono"] }
diesel_codegen = { version = "0.7.0", features = ["postgres"], optional = true }
dotenv = "0.8.0"
chrono = { version = "*", features = ["rustc-serialize"] }
uuid = { version = "0.2", features = ["v4"] }

[features]
default = ["syntex", "diesel_codegen_syntex"]
teapot = ["default"]